--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
         <div class="main-left">
             <h1>Pre-Placement Registration</h1>
             <p>Hands on placement development skills with ZORO.</p>
+            <div class="quotebox">
+                <p>"Any fool can write code that a computer can understand. Good programmers write code that humans can understand."</p>
+            </div>
         </div>
         <div class="main-right">
             <div class="content">
@@ -65,7 +68,7 @@
                     </div>
                     <div>
                         <label for="cgpa">CGPA/Percentage:</label>
-                        <input type="text" id="cgpa" placeholder="Enter CGPA/Percentage">
+                        <input type="number" id="cgpa" placeholder="Enter CGPA/Percentage">
                     </div>
                     <div>
                         <label for="specialization">Specialization (if applicable):</label>
@@ -114,7 +117,7 @@
                     <label for="cover-letter">Cover Letter (optional):</label>
                     <input type="file" id="cover-letter" name="cover-letter" accept=".pdf,.doc,.docx">
                 </div>
-                <button class="submit" type="submit">Submit</button>
+                <center><button class="submit" type="submit">Submit</button></center>
             </div>
         </div>
     </div>
