--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
             <h1>Pre-Placement Registration</h1>
             <p>Hands on placement development skills with ZORO.</p>
             <div class="quotebox">
-                <p>"Any fool can write code that a computer can understand. Good programmers write code that humans can understand."</p>
+                <p>"Software and cathedrals are much the same – first we build them, then we pray."</p>
+            </div>
+            <div class="quotebox">
+                <p>"Weeks of coding can save you hours of planning."</p>
             </div>
         </div>
         <div class="main-right">
@@ -44,8 +47,8 @@
                 <div>
                     <label for="mobile-no">Mobile No: </label>
                     <div class="mobile-no-input">
-                        <input id="ccode" type="tel" placeholder="+91">
-                        <input id="mobile" type="tel" name="mobile-no" pattern="[0-9]{10}" placeholder="62XXXXXXXX">
+                        <input id="ccode" type="tel" maxlength="3" placeholder="+91">
+                        <input id="mobile" type="tel" name="mobile-no" maxlength="10" placeholder="62XXXXXXXX" >
                     </div>
                 </div>
                 <div>
